[Tyler] Fixed about page on mobile

--- a/Roja/css/main.css
+++ b/Roja/css/main.css
@@ -478,6 +478,9 @@ https://stackoverflow.com/questions/5687035/css-bolding-some-text-without-changi
             }
             /*---------TIMELINE START---------*/
             /* The actual timeline (the vertical ruler) */
+.about-container h1 {
+    text-align: center;
+}
             
             .timeline {
                 position: relative;
@@ -576,10 +579,15 @@ https://stackoverflow.com/questions/5687035/css-bolding-some-text-without-changi
                 background-color: white;
                 position: relative;
                 border-radius: 6px;
+                
+                display: flex;
+                    flex-direction: column;
+                    align-items: center;
             }
+
             /* Media queries - Responsive timeline on screens less than 600px wide */
             
-            @media screen and (max-width: 600px) {
+            @media screen and (max-width: 1000px) {
                 /* Place the timelime to the left */
                 .timeline::after {
                     left: 31px;
@@ -606,7 +614,17 @@ https://stackoverflow.com/questions/5687035/css-bolding-some-text-without-changi
                 .right {
                     left: 0%;
                 }
+
             }
+@media screen and (max-width:600px){
+                    
+                .timeline-content img {
+                    max-width: 95%;
+                }
+    .timeline-content {
+        padding: 0;
+    }
+}
             /*---------TIMELINE END---------*/
             /*---------CONTACT FORM START---------*/
             
